--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,15 @@ h2 {
   .header-text {
     font-size: 1rem;
   }
+
+  header {
+    margin: 80px 50px 40px 50px;
+    line-height: 1.6;
+  }
+
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 
 .card {
@@ -99,6 +108,7 @@ h2 {
 @media(min-width: 700px) {
   body {
     display: grid;
+    grid-template-columns: 1fr auto 1fr;
     grid-template-areas: 
       "header header header"
       " . card-top . "
@@ -106,6 +116,14 @@ h2 {
       " card-left card-bottom card-right"
       " . card-bottom . "
       "footer footer footer";
+      grid-gap: 20px;
+      padding: 0 20px;
+  }
+
+  .card {
+    margin: 0 auto;
+    max-width: 350px;
+    padding: 30px;
   }
 
   header {
@@ -114,6 +132,8 @@ h2 {
 
   .card-supervisor {
     grid-area: card-left;
+    margin-left: auto;
+    margin-right: 0;
   }
 
   .card-team {
@@ -126,9 +146,26 @@ h2 {
 
   .card-calculator {
     grid-area: card-right;
+    margin-right: auto;
+    margin-left: 0;
   }
 
   footer {
     grid-area: footer;
+  }
+
+  .card-heading {
+    font-size: 1.2rem;
+    margin-bottom: 8px;
+  }
+  
+  .card-text {
+    font-size: 0.8rem;
+    letter-spacing: 0;
+  }
+
+  .icon {
+    margin: 20px 0 0 auto;
+    width: 60px;
   }
 }
